fix: vegetal to vegetation
